--- a/package.json
+++ b/package.json
@@ -39,29 +39,29 @@
   },
   "homepage": "https://github.com/cortexdao/dao-contracts/README.md",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.1",
-    "@nomiclabs/hardhat-vyper": "^2.0.1",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "2.0.2",
+    "@nomiclabs/hardhat-etherscan": "2.1.6",
+    "@nomiclabs/hardhat-vyper": "3.0.0",
+    "@nomiclabs/hardhat-waffle": "2.0.1",
+    "@nomiclabs/hardhat-web3": "2.0.0",
+    "chai": "4.3.4",
     "dot-only-hunter": "1.0.3",
     "dotenv": "^8.2.0",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.14.0",
-    "ethereum-waffle": "~3.4.0",
-    "ethers": "~5.4.7",
-    "ganache-time-traveler": "^1.0.15",
-    "hardhat": "2.6.6",
-    "hardhat-contract-sizer": "^2.1.1",
+    "ethereum-waffle": "3.4.0",
+    "ethers": "5.4.7",
+    "ganache-time-traveler": "1.0.16",
+    "hardhat": "2.9.3",
+    "hardhat-contract-sizer": "2.1.1",
     "husky": "4.0.10",
-    "lint-staged": "^10.2.11",
+    "lint-staged": "10.5.4",
     "prettier": "2.3.0",
     "prettier-plugin-solidity": "1.0.0-beta.11",
-    "solhint": "^3.2.0",
-    "solidity-coverage": "^0.7.10"
+    "solhint": "3.3.7",
+    "solidity-coverage": "0.7.20"
   },
   "dependencies": {
-    "@chainlink/contracts": "0.0.9",
     "@openzeppelin/contracts": "3.4.0",
     "@openzeppelin/contracts-ethereum-package": "3.0.0",
     "chalk": "^4.1.0",
