--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
     "prettier": "2.3.0",
     "prettier-plugin-solidity": "1.0.0-beta.11",
     "solhint": "3.3.7",
-    "solidity-coverage": "0.7.20"
+    "solidity-coverage": "0.7.20",
+    "@gnosis.pm/safe-ethers-adapters": "0.1.0-alpha.3",
+    "axios": "^0.21.1",
+    "axios-retry": "^3.2.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "4.5.0",
